--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
+
 :root {
     --color-primary: #000000;
     --color-white: #e9e9e9;
@@ -18,7 +19,7 @@ body {
 
 .logo {
     color: var(--color-white);
-    font-size: 20px;
+    font-size: 30px;
 }
 
 .logo span {
@@ -103,16 +104,31 @@ body {
 }
 
 .home {
-    min-height: 120vh;
+    min-height: 115vh;
     display: flex;
     align-items: center;
-    background: url(images/cover.jpg) no-repeat;
+    background: url(../images/cover.jpg) no-repeat;
     background-size: cover;
     background-position: center;
+    box-sizing: border-box;
 }
 
-section#gallery {
-    margin: 100px 0px;
+.text {
+    text-align: center;
+    font-size: larger;
+    font-family: sans-serif;
+    background-color: #ff5e00;
+}
+
+.box-container {
+    display: inline-block;
+    align-items: center;
+}
+
+.filter-gal-par {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .port-image {
@@ -132,7 +148,7 @@ section#gallery {
 }
 
 .gallery_product img:hover {
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0.5);
     opacity: 0.7;
     transform: scale(1.1, 1.1);
 }
@@ -171,7 +187,8 @@ section#project {
     right: 0;
     top: 0px;
     font-size: 17px;
-    background-color: #e05809;
+    background-color: serif;
+    background-color: #ff5e00;
     color: #fff;
     z-index: 1;
     padding: 9px;
@@ -186,37 +203,82 @@ section#project {
     margin-left: 30px;
 }
 
-footer {
-    border-top: 3px solid #e05809;
+.footer {
+    padding: 40px 0;
+    background-color: #fff;
 }
 
-.footer-1 h2 {
-    color: #e05809;
-    font-size: 30px;
+.footer .social {
+    text-align: center;
+    padding-bottom: 25px;
+    color: #fff;
 }
 
-.fot-info h3 {
-    color: #333;
-    font-size: 25px;
+.footer .social a {
+    font-size: 24px;
+    color: inherit;
+    border: 1px solid #fff;
+    width: 40px;
+    height: 40px;
+    line-height: 38px;
     display: inline-block;
-    padding-bottom: 5px;
-    margin-bottom: 20px;
+    text-align: center;
+    border-radius: 50%;
+    margin: 0 8px;
+    opacity: 0.75px;
 }
 
-.fot-info ul {
+.footer .social a:hover {
+    opacity: 0.9;
+}
+
+.footer ul {
+    margin-top: 0;
+    padding: 0;
     list-style: none;
+    font-size: 18px;
+    line-height: 1.6;
+    margin-bottom: 0;
+    text-align: center;
 }
 
-.fot-info ul li a {
-    color: #333;
+.footer ul li a {
+    color: inherit;
     text-decoration: none;
-    padding: 5px 0px;
-    display: inline-block;
-    transition: all 0.6s ease;
+    opacity: 0;
 }
 
-.fot-info ul li a:hover {
-    padding-left: 5px;
+.footer ul li {
+    display: inline-block;
+    padding: 0 15px;
+}
+
+.footer ul li a:hover {
+    opacity: 1;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+
+.fa-youtube {
+    background: #bb0000;
+    color: white;
+}
+
+.fa-instagram {
+    background: #d0155d;
+    color: white;
+}
+
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
 }
 
 .copyright {
@@ -224,43 +286,4 @@ footer {
     background-color: #e05809;
     color: #fff;
     padding: 14px 0px;
-    margin: 50px 0px 0px 0px;
 }
-
-.footer-par {
-    display: flex;
-    justify-content: space-between;
-    margin: 50px 0px 0px;
-}
-
-@media screen and (max-width:768px) {
-    .home_header_info h1 {
-        font-size: 20px;
-        line-height: 30px;
-    }
-    .home_header_info p {
-        font-size: 14px;
-        line-height: 30px;
-        width: 100%;
-        margin: 0 auto;
-    }
-    section#gallery {
-        margin: 30px 0px;
-    }
-    .filter-button {
-        font-size: 15px;
-        margin-bottom: 30px;
-        margin: 20px 0px;
-        cursor: pointer;
-        transition: all 0.5s ease;
-    }
-    .footer-par {
-        flex-direction: column;
-        text-align: center;
-    }
-    .explore-info {
-        margin: 0 auto;
-    }
-}
-
-@media screen and (max-width:950px) {}
