--- a/CSS/doctor1.css
+++ b/CSS/doctor1.css
@@ -1,153 +1,153 @@
 :root {
-  --color-primary: #000000;
-  --color-white: #e9e9e9;
-  --color-black:#b12b10;
-  --color-black-1: #212b38;
+    --color-primary: #000000;
+    --color-white: #e9e9e9;
+    --color-black: #b12b10;
+    --color-black-1: #212b38;
 }
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-  font-family: sans-serif;
- 
+    font-family: sans-serif;
 }
 
 .logo {
-  color: var(--color-white);
-  font-size: 30px;
+    color: var(--color-white);
+    font-size: 30px;
 }
 
 .logo span {
-  color: var(--color-primary);
+    color: var(--color-primary);
 }
 
 .menu-bar {
-  background-color: var(--color-black);
-  height: 80px;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 5%;
-
-  position: relative;
+    background-color: var(--color-black);
+    height: 80px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 5%;
+    position: relative;
 }
 
 .menu-bar ul {
-  list-style: none;
-  display: flex;
+    list-style: none;
+    display: flex;
 }
 
 .menu-bar ul li {
-  /* width: 120px; */
-  padding: 10px 30px;
-  /* text-align: center; */
-
-  position: relative;
+    /* width: 120px; */
+    padding: 10px 30px;
+    /* text-align: center; */
+    position: relative;
 }
 
 .menu-bar ul li a {
-  font-size: 20px;
-  color: var(--color-white);
-  text-decoration: none;
-
-  transition: all 0.3s;
+    font-size: 20px;
+    color: var(--color-white);
+    text-decoration: none;
+    transition: all 0.3s;
 }
 
 .menu-bar ul li a:hover {
-  color: var(--color-primary);
+    color: var(--color-primary);
 }
 
 .fas {
-  float: right;
-  margin-left: 10px;
-  padding-top: 3px;
+    float: right;
+    margin-left: 10px;
+    padding-top: 3px;
 }
 
+
 /* dropdown menu style */
+
 .dropdown-menu {
-  display: none;
+    display: none;
 }
 
 .menu-bar ul li:hover .dropdown-menu {
-  display: block;
-  position: absolute;
-  left: 0;
-  top: 100%;
-  background-color: var(--color-black);
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 100%;
+    background-color: var(--color-black);
 }
 
 .menu-bar ul li:hover .dropdown-menu ul {
-  display: block;
-  margin: 10px;
+    display: block;
+    margin: 10px;
 }
 
 .menu-bar ul li:hover .dropdown-menu ul li {
-  width: 150px;
-  padding: 10px;
+    width: 150px;
+    padding: 10px;
 }
 
 .dropdown-menu-1 {
-  display: none;
+    display: none;
 }
 
 .dropdown-menu ul li:hover .dropdown-menu-1 {
-  display: block;
-  position: absolute;
-  left: 150px;
-  top: 0;
-  background-color: var(--color-black);
+    display: block;
+    position: absolute;
+    left: 150px;
+    top: 0;
+    background-color: var(--color-black);
 }
 
-.places{
-  display: inline;
-  text-align: center;
-  border-radius: 12px;
-  
- 
+.places {
+    display: inline;
+    text-align: center;
+    border-radius: 12px;
 }
 
 
 /*-------*/
+
 img {
-  border: 5px solid #555;
+    border: 5px solid #555;
 }
 
-
-
 .card {
-  box-shadow: 0 14px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 400px;
-  margin: auto;
-  text-align: center;
-  
+    box-shadow: 0 14px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 400px;
+    margin: auto;
+    text-align: center;
 }
 
 .title {
-  color: grey;
-  font-size: 20px;
+    color: grey;
+    font-size: 20px;
 }
-
 
 a {
-  text-decoration: none;
-  font-size: 22px;
-  color: black;
+    text-decoration: none;
+    font-size: 22px;
+    color: black;
 }
 
-button:hover, a:hover {
-  opacity: 0.7;
+button:hover,
+a:hover {
+    opacity: 0.7;
 }
 
-    body{
-    background: linear-gradient(rgba(0,0,0,0.4)50%,rgba(0,0,0,0.4)50%);
-    background-image: url(file:///C:/Users/DELL/Downloads/my/drop-down-menu-main/img/white1.jpeg);
+body {
+    background: linear-gradient(rgba(0, 0, 0, 0.4)50%, rgba(0, 0, 0, 0.4)50%);
+    background-image: url(/Images/white1.jpeg);
     background-position: center;
     background-size: cover;
     height: 100vh;
 }
 
+.copyright {
+    text-align: center;
+    background-color: #e05809;
+    color: #fff;
+    padding: 14px 0px;
+}
