--- a/FEED_BACK/style.css
+++ b/FEED_BACK/style.css
@@ -144,3 +144,19 @@ form .btn button {
 form .btn button:hover {
     background: #4e8d48;
 }
+
+.btn-2 button {
+    height: 50px;
+    width: 100%;
+    margin: 15px;
+    background-color: #222;
+    color: #999;
+    outline: none;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.btn-2 button:hover {
+    background: #ff5500;
+}
