--- a/CSS/login.css
+++ b/CSS/login.css
@@ -107,7 +107,7 @@ body {
 
 body {
     background: linear-gradient(rgba(0, 0, 0, 0.4)50%, rgba(0, 0, 0, 0.4)50%);
-    background-image: url(/Images/medi.jpeg);
+    background-image: url(/Images/media.jpeg);
     background-position: center;
     background-size: cover;
     height: 100vh;
