--- a/CSS/payment.css
+++ b/CSS/payment.css
@@ -12,6 +12,10 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: sans-serif;
+}
+
 .logo {
     color: var(--color-white);
     font-size: 24px;
@@ -98,104 +102,131 @@
     background-color: var(--color-black);
 }
 
-body {
-    font-family: sans-serif;
+.payment {
+    background: #f8f8f8;
+    max-width: 360px;
+    margin: 80px auto;
+    height: auto;
+    padding: 35px;
+    padding-top: 70px;
+    border-radius: 5px;
+    position: relative;
 }
 
-* {
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    outline: none;
-    border: none;
-    text-transform: capitalize;
-    transition: all .2s linear;
+.payment h2 {
+    text-align: center;
+    letter-spacing: 2px;
+    margin-bottom: 40px;
+    color: #e96d0e;
 }
 
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 25px;
-    min-height: 100vh;
-    background: linear-gradient(#fff)
-}
-
-.container form {
-    padding: 20px;
-    width: 700px;
-    background: #fff;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, .1);
-}
-
-.container form .row {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 15px;
-}
-
-.container form .row .col {
-    flex: 1 1 250px;
-}
-
-.container form .row .col .title {
-    font-size: 20px;
-    color: #333;
-    padding-bottom: 5px;
-    text-transform: uppercase;
-}
-
-.container form .row .col .inputBox {
-    margin: 15px 0;
-}
-
-.container form .row .col .inputBox span {
-    margin-bottom: 10px;
+.form .label {
     display: block;
+    color: #555555;
+    margin-bottom: 6px;
 }
 
-.container form .row .col .inputBox input {
+.input {
+    padding: 13px 0px 13px 25px;
     width: 100%;
-    border: 1px solid #ccc;
-    padding: 10px 15px;
-    font-size: 15px;
-    text-transform: none;
+    text-align: center;
+    border: 2px solid #dddddd;
+    border-radius: 5px;
+    letter-spacing: 1px;
+    word-spacing: 3px;
+    outline: none;
+    font-size: 16px;
+    color: #555555;
 }
 
-.container form .row .col .inputBox input:focus {
-    border: 1px solid #000;
-}
-
-.container form .row .col .flex {
+.card-grp {
     display: flex;
-    gap: 15px;
+    justify-content: space-between;
 }
 
-.container form .row .col .flex .inputBox {
-    margin-top: 5px;
+.card-item {
+    width: 48%;
 }
 
-.container form .row .col .inputBox img {
-    height: 34px;
-    margin-top: 5px;
-    filter: drop-shadow(0 0 1px #000);
+.space {
+    margin-bottom: 20px;
 }
 
-.container form .submit-btn {
-    width: 100%;
-    padding: 12px;
-    font-size: 17px;
+.icon-relative {
+    position: relative;
+}
+
+.icon-relative .fas,
+.icon-relative .far {
+    position: absolute;
+    bottom: 12px;
+    left: 15px;
+    font-size: 20px;
+    color: #444444;
+}
+
+.btn {
+    margin-top: 40px;
     background: #e05809;
-    color: #fff;
-    margin-top: 5px;
+    padding: 12px;
+    text-align: center;
+    color: #f8f8f8;
+    border-radius: 5px;
     cursor: pointer;
 }
 
-.container form .submit-btn:hover {
+.payment-logo {
+    position: absolute;
+    top: -50px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100px;
+    height: 100px;
+    background: #f8f8f8;
+    border-radius: 50%;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    line-height: 85px;
+}
+
+.payment-logo:before {
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    width: 90px;
+    height: 90px;
     background: #e05809;
+    border-radius: 50%;
+}
+
+.payment-logo p {
+    position: relative;
+    color: #f8f8f8;
+    font-family: sans-serif;
+    font-size: 58px;
+}
+
+@media screen and (max-width: 420px) {
+    .card-grp {
+        flex-direction: column;
+    }
+    .card-item {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    .btn {
+        margin-top: 20px;
+    }
 }
 
 .color-red {
     color: red;
+}
+
+.copyright {
+    text-align: center;
+    background-color: #e05809;
+    color: #fff;
+    padding: 14px 0px;
 }
