--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -164,15 +164,15 @@ body {
     color: rgb(0, 0, 0);
 }
 
-h5 {
+h2 {
     color: rgb(68, 28, 19);
-    font-size: 20px;
+    font-size: 30px;
     margin-bottom: 10px;
 }
 
-.pra p {
+.par p {
     color: black;
-    font-size: 15px;
+    font-size: 20px;
     line-height: 27px;
     margin-bottom: 25px;
 }
