--- a/CSS/popup.css
+++ b/CSS/popup.css
@@ -55,7 +55,7 @@
     width: 100%;
     margin-top: 50%;
     padding: 10px 0;
-    background: #ff8000;
+    background: #d57d5d;
     color: #fff;
     border: 0;
     outline: none;
