--- a/index.css
+++ b/index.css
@@ -139,8 +139,7 @@ section:nth-child(even) {
 }
 
 .home .image img {
-    min-height: 105vh;
-    min-height: 105vh;
+    height: 105vh;
     width: 100%;
 }
 
