--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
     @import url('font-inter.css');
-    :root {
+     :root {
         --primarycolor: #ff5500f5;
         --primarycolorhover: #ff7700;
         --btnice: #D8EBFA;
@@ -19,7 +19,7 @@
         box-sizing: border-box;
     }
     
-    ::-webkit-scrollbar {
+     ::-webkit-scrollbar {
         width: 5px;
     }
     
@@ -319,31 +319,129 @@
         color: var(--primarycolor);
     }
     
+    .menu-icon-dashbord {
+        background-image: url('../img/icons/dashboard.svg');
+    }
+    
+    .menu-icon-doctor {
+        background-image: url('../img/icons/doctors.svg');
+    }
+    
+    .menu-icon-schedule {
+        background-image: url('../img/icons/schedule.svg');
+    }
+    
+    .menu-icon-appoinment {
+        background-image: url('../img/icons/book.svg');
+    }
+    
+    .menu-icon-patient {
+        background-image: url('../img/icons/patients.svg');
+    }
+    
+    .menu-icon-settings {
+        background-image: url('../img/icons/settings.svg');
+    }
+    
+    .menu-icon-session {
+        background-image: url('../img/icons/session.svg');
+    }
+    
+    .menu-icon-home {
+        background-image: url('../img/icons/home.svg');
+    }
+    
+    .menu-icon-dashbord:hover,
+    .menu-icon-dashbord-active {
+        color: var(--primarycolor);
+        background-image: url('../img/icons/dashboard-hover.svg');
+    }
+    
+    .menu-icon-doctor:hover,
+    .menu-icon-doctor-active {
+        color: var(--primarycolor);
+        background-image: url('../img/icons/doctors-hover.svg');
+    }
+    
+    .menu-icon-schedule:hover,
+    .menu-icon-schedule-active {
+        color: var(--primarycolor);
+        background-image: url('../img/icons/schedule-hover.svg');
+    }
+    
+    .menu-icon-appoinment:hover,
+    .menu-icon-appoinment-active {
+        color: var(--primarycolor);
+        background-image: url('../img/icons/book-hover.svg');
+    }
+    
     .menu-icon-patient:hover,
     .menu-icon-patient-active {
         color: var(--primarycolor);
+        background-image: url('../img/icons/patients-hover.svg');
     }
     
     .menu-icon-settings:hover,
     .menu-icon-settings-active {
         color: var(--primarycolor);
+        background-image: url('../img/icons/settings-iceblue.svg');
     }
     
     .menu-icon-session:hover,
     .menu-icon-session-active {
         color: var(--primarycolor);
+        background-image: url('../img/icons/session-iceblue.svg');
     }
     
     .menu-icon-home:hover,
     .menu-icon-home-active {
         color: var(--primarycolor);
+        background-image: url('../img/icons/home-iceblue.svg');
     }
     
     .btn-icon-back {
+        background-image: url('../img/icons/back-iceblue.svg');
         background-position: 18px 50%;
         background-repeat: no-repeat;
         transition: 0.5s;
         padding: 8px 20px 8px 40px;
+    }
+    
+    .btn-icon-back:hover {
+        background-image: url('../img/icons/back-white.svg');
+    }
+    
+    .btn-edit {
+        background-image: url('../img/icons/edit-iceblue.svg');
+    }
+    
+    .btn-edit:hover {
+        background-image: url('../img/icons/edit-white.svg');
+    }
+    
+    .btn-view {
+        background-image: url('../img/icons/view-iceblue.svg');
+    }
+    
+    .btn-view:hover {
+        background-image: url('../img/icons/view-white.svg');
+    }
+    
+    .btn-delete {
+        background-image: url('../img/icons/delete-iceblue.svg');
+    }
+    
+    .btn-delete:hover {
+        background-image: url('../img/icons/delete-white.svg');
+    }
+    
+    .btn-filter {
+        background-image: url('../img/icons/filter-iceblue.svg');
+        background-position: 15px 50%;
+    }
+    
+    .btn-filter:hover {
+        background-image: url('../img/icons/filter-white.svg');
     }
     
     .dashboard-items {
@@ -437,6 +535,7 @@
     }
     
     .btn-book {
+        background-image: url('../img/icons/book-balck.svg');
         background-position: 68% 50%;
         background-repeat: no-repeat;
         transition: 0.5s;
